--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "node-html-parser": "^5.3.3",
-    "uvu": "^0.5.3"
+    "uvu": "^0.5.3",
+    "xmldom": "0.6.0"
   }
 }
