--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-html-parser": "^5.3.3",
-    "uvu": "^0.5.3",
-    "xmldom": "0.6.0"
+    "uvu": "^0.5.3"
   }
 }
