--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "rollup --config",
     "test": "uvu tests",
     "serve": "web-dev-server --root-dir src/delivery/web --watch --node-resolve"
   },
@@ -14,6 +15,10 @@
     "uvu": "^0.5.3"
   },
   "devDependencies": {
-    "@web/dev-server": "0.1.31"
+    "@web/dev-server": "0.1.31",
+    "rollup": "2.75.3",
+    "rollup-plugin-clean": "1.0.0",
+    "rollup-plugin-copy": "3.4.0",
+    "rollup-plugin-terser": "7.0.2"
   }
 }
