--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup --config",
-    "test": "uvu tests",
-    "serve": "web-dev-server --root-dir src/delivery/web --watch --node-resolve"
+    "serve": "web-dev-server --root-dir src/delivery/web --watch --node-resolve",
+    "test:uvu": "uvu tests/domain",
+    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.js' --node-resolve",
+    "test": "npm run test:uvu; npm run test:wtr"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +17,9 @@
     "uvu": "^0.5.3"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "4.3.4-fix.0",
     "@web/dev-server": "0.1.31",
+    "@web/test-runner": "0.13.28",
     "rollup": "2.75.3",
     "rollup-plugin-clean": "1.0.0",
     "rollup-plugin-copy": "3.4.0",
