--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
+    "@open-wc/testing": "3.1.5",
     "@web/dev-server": "0.1.31",
     "@web/test-runner": "0.13.28",
+    "@web/test-runner-visual-regression": "0.6.5",
     "rollup": "2.75.3",
     "rollup-plugin-clean": "1.0.0",
     "rollup-plugin-copy": "3.4.0",
