--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rollup --config",
     "serve": "web-dev-server --root-dir src/delivery/web --watch --node-resolve",
-    "test:uvu": "uvu tests/domain",
+    "test:uvu": "uvu -r tsm tests/domain",
     "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.js' --node-resolve",
     "test": "npm run test:uvu && npm run test:wtr"
   },
@@ -19,13 +19,19 @@
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "3.1.5",
+    "@rollup/plugin-typescript": "8.3.2",
+    "@types/node": "17.0.38",
     "@web/dev-server": "0.1.31",
+    "@web/dev-server-esbuild": "0.3.0",
     "@web/test-runner": "0.13.28",
     "@web/test-runner-commands": "0.6.1",
     "@web/test-runner-visual-regression": "0.6.5",
+    "esbuild-register": "3.3.2",
     "rollup": "2.75.3",
     "rollup-plugin-clean": "1.0.0",
     "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-terser": "7.0.2"
+    "rollup-plugin-terser": "7.0.2",
+    "tsm": "2.2.1",
+    "typescript": "4.7.2"
   }
 }
