--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,18 @@
     "include": ["src/**/*"],
   "compilerOptions": {
     "target": "esnext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "lib": ["es2020"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    "module": "ES2020",                                /* Specify what module code is generated. */
+    "lib": [
+      "es2020",
+      "dom"
+    ],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "module": "esnext",                                /* Specify what module code is generated. */
     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "types": ["node"],                                      /* Specify type package names to be included without being referenced in a source file. */
     "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
     "checkJs": false,                                  /* Enable error reporting in type-checked JavaScript files. */
     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
+    "declaration": true,
     "removeComments": true,                           /* Disable emitting comments. */
     "noEmit": true,                                   /* Disable emitting files from a compilation. */
     "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' when a module doesn't have a default export. */
