--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup --config",
     "serve": "web-dev-server --root-dir src/delivery/web --watch --node-resolve",
     "test:uvu": "uvu -r tsm tests/domain",
-    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.js' --node-resolve",
+    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve",
     "test": "npm run test:uvu && npm run test:wtr"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "3.1.5",
     "@rollup/plugin-typescript": "8.3.2",
+    "@types/mocha": "9.1.1",
     "@types/node": "17.0.38",
     "@web/dev-server": "0.1.31",
     "@web/dev-server-esbuild": "0.3.0",
