--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
-    "include": ["src/**/*"],
   "compilerOptions": {
     "target": "esnext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "lib": [
-      "es2020",
+      "esnext",
       "dom"
     ],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "module": "esnext",                                /* Specify what module code is generated. */
-    "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+    "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-    "types": ["node"],                                      /* Specify type package names to be included without being referenced in a source file. */
+    "types": ["node", "mocha"],                                      /* Specify type package names to be included without being referenced in a source file. */
     "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
     "checkJs": false,                                  /* Enable error reporting in type-checked JavaScript files. */
     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
