--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "An spotify to traktor playlist converter",
   "type": "module",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "rollup --config",
     "serve": "web-dev-server --root-dir src/delivery/web --watch --node-resolve",
