--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
     "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve",
     "test": "npm run test:uvu && npm run test:wtr"
   },
-  "author": "",
+  "author": "Ferran Llop",
   "license": "ISC",
-  "dependencies": {
-    "uvu": "^0.5.3"
-  },
   "devDependencies": {
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "3.1.5",
@@ -33,6 +30,7 @@
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-terser": "7.0.2",
     "tsm": "2.2.1",
-    "typescript": "4.7.2"
+    "typescript": "4.7.2",
+    "uvu": "0.5.3"
   }
 }
