--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "scripts": {
     "build": "rollup --config",
     "serve": "npm run build -- --watch & web-dev-server --root-dir build --watch --node-resolve",
-    "test:uvu": "watchlist src test -- uvu -r tsm tests/domain",
-    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve"
+    "tsc": "tsc --watch --noEmit",
+    "test:uvu": "uvu -r tsm tests/domain",
+    "test:uvu:watch": "watchlist src test -- npm run test:uvu",
+    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve",
+    "test:wtr:watch": "npm run test:wtr -- --watch"
   },
   "author": "Ferran Llop",
   "license": "ISC",
