--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "3.1.5",
     "@rollup/plugin-typescript": "8.3.2",
+    "@types/express": "4.17.13",
     "@types/mocha": "9.1.1",
     "@types/node": "17.0.38",
     "@web/dev-server": "0.1.31",
@@ -37,5 +38,8 @@
     "typescript": "4.7.2",
     "uvu": "0.5.3",
     "watchlist": "0.3.1"
+  },
+  "dependencies": {
+    "express": "4.18.1"
   }
 }
