--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve:client-side": "web-dev-server --root-dir build --watch --node-resolve",
     "serve:server-side": "nodemon --ext '*' --exec 'node --loader tsm src/delivery/server-side/server.ts'",
     "tsc": "tsc --watch --noEmit",
+    "tsc:domain": "tsc",
     "test:uvu": "uvu -r tsm tests/domain",
     "test:uvu:watch": "watchlist src tests -- npm run test:uvu",
     "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve",
