--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+      "include": ["src/**/*.d.ts"],
   "compilerOptions": {
     "outDir": "./build",
     "target": "esnext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
@@ -11,7 +12,7 @@
     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     "types": ["node", "mocha"],                                      /* Specify type package names to be included without being referenced in a source file. */
     "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
-    "checkJs": false,                                  /* Enable error reporting in type-checked JavaScript files. */
+    "checkJs": true,                                  /* Enable error reporting in type-checked JavaScript files. */
     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     "declaration": true,
     "removeComments": true,                           /* Disable emitting comments. */
