--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve:server-side": "nodemon --ext '*' --exec 'node --loader tsm src/delivery/server-side/server.ts'",
     "tsc": "tsc --watch --noEmit",
     "tsc:domain": "tsc",
-    "test:uvu": "uvu -r tsm tests/domain",
+    "test:uvu": "uvu tests --ignore 'delivery|\\.d\\.ts'",
     "test:uvu:watch": "watchlist src tests -- npm run test:uvu",
     "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve",
     "test:wtr:watch": "npm run test:wtr -- --watch",
@@ -42,6 +42,7 @@
     "watchlist": "0.3.1"
   },
   "dependencies": {
-    "express": "4.18.1"
+    "express": "4.18.1",
+    "ramda": "0.28.0"
   }
 }
