Make youtube playlist creator and regression testing work

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "serve:server-side": "nodemon --ext '*' --exec 'node --loader tsm src/delivery/server-side/server.ts'",
     "tsc": "tsc --watch --noEmit",
     "tsc:domain": "tsc",
-    "test:uvu": "uvu tests --ignore 'delivery|\\.d\\.ts'",
+    "test:uvu": "uvu tests --ignore '\\.d\\.ts'",
     "test:uvu:watch": "watchlist src tests -- npm run test:uvu",
-    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.{ts,js}' --node-resolve",
+    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.js' --node-resolve",
     "test:wtr:watch": "npm run test:wtr -- --watch",
     "test:watch": "npm run test:wtr:watch & npm run test:uvu:watch"
   },
@@ -29,11 +29,10 @@
     "@types/node": "17.0.38",
     "@web/dev-server": "0.1.31",
     "@web/dev-server-esbuild": "0.3.0",
-    "@web/test-runner": "0.13.28",
-    "@web/test-runner-commands": "0.6.1",
-    "@web/test-runner-visual-regression": "0.6.5",
     "esbuild-register": "3.3.2",
     "nodemon": "2.0.16",
+    "puppeteer": "15.4.0",
+    "puppeteer-screenshot-tester": "1.5.0",
     "rollup": "2.75.3",
     "rollup-plugin-clean": "1.0.0",
     "rollup-plugin-copy": "3.4.0",
