--- a/package.json
+++ b/package.json
@@ -7,42 +7,24 @@
   "scripts": {
     "deploy": "./deploy.sh",
     "build": "rollup --config",
-    "serve:client-side-old": "web-dev-server --root-dir build --watch --node-resolve",
-    "serve:client-side": "web-dev-server --root-dir src --watch --node-resolve",
-    "serve:server-side": "nodemon --ext '*' --exec 'node --loader tsm src/delivery/server-side/server.ts'",
-    "tsc": "tsc --watch --noEmit",
-    "tsc:domain": "tsc",
+    "serve": "web-dev-server --root-dir src --watch --node-resolve",
     "test:uvu": "uvu tests --ignore '\\.d\\.ts'",
-    "test:uvu:watch": "watchlist src tests -- npm run test:uvu",
-    "test:wtr": "web-test-runner 'tests/delivery/web/**/*.test.js' --node-resolve",
-    "test:wtr:watch": "npm run test:wtr -- --watch",
-    "test:watch": "npm run test:wtr:watch & npm run test:uvu:watch"
+    "test:uvu:watch": "watchlist src tests -- npm run test:uvu"
   },
   "author": "Ferran Llop",
   "license": "ISC",
   "devDependencies": {
-    "@esm-bundle/chai": "4.3.4-fix.0",
-    "@open-wc/testing": "3.1.5",
-    "@rollup/plugin-typescript": "8.3.2",
-    "@types/express": "4.17.13",
-    "@types/mocha": "9.1.1",
-    "@types/node": "17.0.38",
     "@web/dev-server": "0.1.31",
-    "@web/dev-server-esbuild": "0.3.0",
-    "esbuild-register": "3.3.2",
-    "nodemon": "2.0.16",
     "puppeteer": "15.4.0",
     "puppeteer-screenshot-tester": "1.5.0",
     "rollup": "2.75.3",
     "rollup-plugin-clean": "1.0.0",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-terser": "7.0.2",
-    "tsm": "2.2.1",
     "uvu": "0.5.3",
     "watchlist": "0.3.1"
   },
   "dependencies": {
-    "express": "4.18.1",
     "ramda": "0.28.0"
   }
 }
