Move unit tests to its own directory and separate scripts to run unit and e2e tests separately

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "deploy": "./deploy.sh",
     "build": "rollup --config",
     "serve": "web-dev-server --root-dir src --watch --node-resolve",
-    "test:uvu": "uvu tests --ignore '\\.d\\.ts'",
-    "test:uvu:watch": "watchlist src tests -- npm run test:uvu"
+    "test": "uvu tests --ignore '\\.d\\.ts'",
+    "test:unit": "uvu tests/unit --ignore '\\.d\\.ts'",
+    "test:unit:watch": "watchlist src tests -- npm run test:uvu",
+    "test:e2e": "uvu tests/e2e"
   },
   "author": "Ferran Llop",
   "license": "ISC",
