Rename .env to be prepared to have a js configuration object

--- a/.env.deploy.example
+++ b/.env.deploy.example
@@ -2,3 +2,5 @@ SPOKTOR_SSH_PORT=2
 SPOKTOR_SSH_USER=marie
 SPOKTOR_SSH_HOST=65.78.456.32
 SPOKTOR_REMOTE_DEPLOY_PATH=/var/www/spoktor
+SPOKTOR_DEV_SERVER_PORT=8000
+SPOKTOR_TEST_SERVER_PORT=9000
