--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "deploy": "./deploy.sh",
     "build": "rollup --config",
-    "serve": "web-dev-server --root-dir src --watch --node-resolve",
-    "test": "uvu tests --ignore '\\.d\\.ts'",
+    "serve": "web-dev-server --watch",
+    "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "uvu tests/unit --ignore '\\.d\\.ts'",
     "test:unit:watch": "watchlist src tests -- npm run test:uvu",
-    "test:e2e": "uvu tests/e2e"
+    "test:e2e": "uvu tests/e2e",
+    "check": "(npm run read-env && echo $SPOKTOR_DEV_SERVER_PORT)"
+
   },
   "author": "Ferran Llop",
   "license": "ISC",
