--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
     "test:watch": "watchlist src tests -- npm run test",
     "test:unit": "npm run test -- tests/unit",
     "test:unit:watch": "watchlist src tests -- npm run test:unit",
-    "test:e2e": "npm run test -- tests/e2e"
+    "test:e2e": "npm run test -- tests/e2e",
+    "update-dependencies": "npx npm-upgrade"
   },
   "author": "Ferran Llop",
   "license": "ISC",
   "devDependencies": {
-    "@web/dev-server": "0.1.32",
-    "puppeteer": "15.4.0",
-    "puppeteer-screenshot-tester": "1.5.0",
-    "rollup": "2.77.0",
-    "rollup-plugin-copy": "3.4.0",
+    "@rollup/plugin-terser": "0.4.4",
+    "@web/dev-server": "0.4.6",
+    "puppeteer": "23.2.1",
+    "puppeteer-screenshot-tester": "1.6.0",
+    "rollup": "4.21.1",
+    "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-delete": "2.0.0",
-    "rollup-plugin-terser": "7.0.2",
     "uvu": "0.5.6",
     "watchlist": "0.3.1"
   },
   "dependencies": {
-    "ramda": "0.28.0"
+    "ramda": "0.30.1"
   }
 }
