--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "11.1.6",
+    "@types/puppeteer-screenshot-tester": "1.6.0",
     "@types/ramda": "0.30.2",
     "@web/dev-server": "0.4.6",
     "@web/dev-server-esbuild": "1.0.2",
